--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@azure/functions": "^4.0.0",
     "dotenv":"^16.4.5",
-    "nodemailer":"^6.9.16"
+    "nodemailer":"^6.9.16",
+    "cors":"^2.8.5"
   },
   "devDependencies": {},
   "main": "src/{index.js,functions/*.js}"
