--- a/api/package.json
+++ b/api/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/communication-email": "^1.0.0",
     "@azure/functions": "^4.0.0",
-    "dotenv":"^16.4.5",
-    "nodemailer":"^6.9.16",
-    "cors":"^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.16"
   },
-  "devDependencies": {},
   "main": "src/{index.js,functions/*.js}"
 }
